# casevo-modular

./: .env.example  .gitignore  README.md  pyproject.toml
course_proposal/: Casevo A Cognitive Agents and Social Evolution Simulator.md  README.md  proposal.tex
docs/: CONTRIBUTING.md  README.md
docs/api/: README.md
docs/experiments/: README.md  baseline.md  election.md  info_spreading.md  resource.md
docs/guides/: architecture.md  best_practices.md  getting_started.md
examples/: README.md  quickstart.py
experiments/: README.md  __init__.py
experiments/comparisons/: __init__.py  baseline.py  cot_vs_tot.py  full_optimization.py  memory_optimization.py
experiments/configs/: election_config.json  info_spreading_config.json  resource_config.json
experiments/election/: __init__.py  scenario.py  with_llm.py
experiments/info_spreading/: __init__.py  scenario.py  with_llm.py
experiments/info_spreading/prompts/: info_tot_evaluate.j2  info_tot_generate.j2
experiments/resource/: __init__.py  scenario.py  with_llm.py
experiments/resource/prompts/: resource_tot_evaluate.j2  resource_tot_generate.j2
experiments/results/: README.md
experiments/results/comparisons/: analysis_20251227_145641.md  comprehensive_analysis.md  cot_vs_tot.json  election_ablation_tot_memory_20251227_191733_43084.json  election_ablation_tot_reflection_20251227_191741_27424.json  (+18 more)
experiments/utils/: __init__.py  config_loader.py  metrics.py  report_generator.py  thought_logger.py
experiments/visualization/: plot_experiment_results.py
report/: midterm_report.tex
report/final/: final_report.tex  generate_figures.py
report/midterm/: generate_figures.py
report/presentation/: presentation.tex
src/casevo/: __init__.py  prompt.py
tests/: __init__.py  conftest.py  test_agent.py  test_chain.py  test_component.py  test_llm.py  test_memory.py  test_model.py  test_prompt.py  test_tree.py
(+75 files in other folders)
